# sc4-imgui-service

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Doxyfile.plain  README.md  SC4ImGuiAllTargets.vcxproj  SC4ImGuiAllTargets.vcxproj.filters  SC4ImGuiSample.vcxproj  SC4ImGuiSample.vcxproj.filters  SC4ImGuiSampleCity.vcxproj  SC4ImGuiSampleCity.vcxproj.filters  SC4ImGuiSampleDemo.vcxproj  SC4ImGuiSampleDemo.vcxproj.filters  SC4ImGuiService.vcxproj  SC4ImGuiService.vcxproj.filters  SC4ImGuiTextureSample.vcxproj  SC4ImGuiTextureSample.vcxproj.filters  SC4ImguiBackend.sln  SC4RenderServices.ini  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  gzcom2.vcxproj  gzcom2.vcxproj.filters  imgui.lib  imgui.vcxproj  imgui.vcxproj.filters
.github/workflows/: windows-ci.yml
docs/: Doxyfile  Doxyfile.plain  services.md  terrain-decals.md  transit-access-investigation.md
src/: DX7InterfaceHook.cpp  DX7InterfaceHook.h  imconfig.h  version.h
src/public/: ImGuiPanel.h  ImGuiPanelAdapter.h  ImGuiServiceIds.h  ImGuiTexture.h  TerrainDecalServiceIds.h  TransformLogger.h  cIGZDrawService.h  cIGZImGuiService.h  cIGZTerrainDecalService.h
src/sample/: DrawServiceSampleDirector.cpp  ImGuiSampleCityDirector.cpp  ImGuiSampleDemoDirector.cpp  ImGuiSampleDirector.cpp  ImGuiTextureSample.cpp  ImGuiTransformDebugDirector.cpp  OverlayManagerSampleDirector.cpp  RDTSCPatchDirector.cpp  S3DCameraDebugSampleDirector.cpp  TerrainDecalSampleDirector.cpp  TransitAccessDirector.cpp  TransitAccessDirector.md  WorldProjectionSampleDirector.cpp
src/sample/camera-view-input/: CameraViewInputControl.cpp  CameraViewInputSampleDirector.cpp  SC4CameraControlLayout.hpp
src/sample/date-jumper/: DateJumperDirector.cpp
src/sample/road-decal/: RoadDecalData.cpp  RoadDecalData.hpp  RoadDecalInputControl.cpp  RoadDecalInputControl.hpp  RoadDecalSampleDirector.cpp
src/sample/transit-access/: TransitAccessSampleDirector.cpp
src/service/: CustomServicesDirector.cpp  DrawService.cpp  DrawService.h  ImGuiService.cpp  ImGuiService.h  ImGuiServiceDirector.cpp  RenderServicesDirector.cpp  S3DCameraService.cpp  TransformLogger.cpp
src/service/decal/: ClippedTerrainDecalRenderer.cpp  ClippedTerrainDecalRenderer.h  RelativeCallPatch.cpp  RelativeCallPatch.h  TerrainDecalHook.cpp  TerrainDecalHook.h  TerrainDecalRegistry.cpp  TerrainDecalRegistry.h  TerrainDecalService.cpp  TerrainDecalService.h  TerrainDecalSidecarCodec.cpp  TerrainDecalSidecarCodec.h  TerrainDecalSymbols.cpp  TerrainDecalSymbols.h
src/utils/: Fonts.h  Logger.cpp  Settings.cpp  Settings.h
